# Mirage

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  update_submodules.sh
cmake/: playground.cmake
engine/: Engine.h  mirage.h
engine/src/core/: Application.cpp  Application.h  EntryPoint.h  main.h
mirage/: CMakeLists.txt  mirage.h  mirage_sdl.hpp
mirage/core/: application.cpp  application.h  context.h  main.h
mirage/mirage/: CMakeLists.txt  context.hpp
mirage/mirage/backend/dx12/: Readme.md
mirage/mirage/backend/metal/: Readme.md
mirage/mirage/backend/vulkan/: Readme.md
mirage/mirage/core/: context.cpp  context.h  renderer.cpp  renderer.h
mirage/mirage_glfw/: CMakeLists.txt  context.cpp  context.hpp
mirage/mirage_sdl/: CMakeLists.txt  context.cpp  context.hpp
mirage/platform/: context_sdl.cpp  context_sdl.h
mirage_sdl/: CMakeLists.txt  context.cpp  context.h  mirage_sdl.hpp
playground/: App.cpp  CMakeLists.txt
playground/application/vku/: vku.hpp
playground/engine/: CMakeLists.txt  main.cpp
playground/glm/: main.cpp
playground/metal_glfw/: main.mm
playground/metal_sdl/: main.mm
playground/swift/: main.swift
playground/vulkan/: CMakeLists.txt  main.cpp
playground/vulkan_glfw/: main.cpp
playground/vulkan_sdl/: main.cpp
playground/window_glfw/: main.cpp
playground/window_sdl/: main.cpp
